service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  labels:
    app: influx
spec:
  ports:
  - port: 8086
    protocol: TCP
  selector:
    app: influx
