service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
  ports:
    - name: web
      port: 3000
      targetPort: 3000
  type: NodePort
